# SalesMate

./: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  androidsystem.cpp  androidsystem.h  barcodeengine.cpp  barcodeengine.h  main.cpp  qtquickcontrols2.conf  rsources.qrc
System/: databasemanager.cpp  databasemanager.h  expense.cpp  expense.h  expensesmodel.cpp  expensesmodel.h  income.cpp  income.h  incomemodel.cpp  incomemodel.h  product.cpp  product.h  productfilterproxymodel.cpp  service.cpp  service.h  servicemodel.cpp  servicemodel.h
UI/About/: AboutAppPage.qml  AboutSalesmate.qml  AboutUsPage.qml
UI/Auth/: SignInPage.qml  SignUpPage.qml
UI/Drawer/: DrawerDelegate.qml  DrawerMenu.qml  DrawerModel.qml  ImageProcessor.js  Profile.qml
UI/Home/: CurrentSales.qml  Home.qml  HomePage.qml  MainSatckView.qml
UI/Modles/: CountryModel.qml  CurrencyModel.qml
UI/Notification/: NotificationDelegate.qml  NotificationModel.qml  NotificationPage.qml
UI/Profile/: AvataDrawerTools.qml  CameraPage.qml  CameraPopup.qml  ProfileEditPage.qml  ProfilePage.qml
UI/Receipt/: Receipt.qml  ReceiptText.qml
UI/Satatistics/: Daily.qml  ItemReportViewDelegate.qml  ItemReportViewModel.qml  Monthly.qml  Reports.qml  Statistics.qml  Summary.qml  Yearly.qml
UI/SearchBarcode/: SearchBarcodeDelegate.qml
UI/Settings/: SalesmateSettings.qml  SettingsPage.qml
UI/Stock/: AddExpensePage.qml  AddItemPage.qml  AddStock.qml  CurrentSalesDelegate.qml  CurrentStockDelegete.qml  CurrentStockModel.qml  OtherIncomePage.qml  SalesModel.qml  SearchBar.qml  ServicesPage.qml  ShowSalesPage.qml  ShowStock.qml  StockDelegate.qml  StockModel.qml
UI/Updates/: ChechUpdatePage.qml
UI/Utils/: AddNewService.qml  Avatar.qml  BarcodeScanner.qml  BarcodeSearch.qml  CircularProgressBar.qml  CountrySelector.qml  CustomButton.qml  DirectionalText.qml  Heading.qml  InfoPopup.qml  PopupHeading.qml  ProductEditPopup.qml  ScannerTools.qml  SearchBar.qml  Utils.js  Wanning.qml
UI/Welcome/: BusinessVerificationScreen.qml  NumberVerificationScreen.qml  OTPScreen.qml  OwnerLoginScreen.qml  RoleSelectionScreen.qml  Welcome.qml  WelcomePage.qml  WelcomeScreen.qml  WorkerLoginScreen.qml
android/: .project  AndroidManifest.xml  build.gradle  gradle.properties
android/res/values/: colors.xml  styles.xml
android/src/com/native/: Native.java
android/src/com/salesmate/: AlarmBroadcastReceiver.java  AlarmHelper.java  AlarmKeepAliveService.java  AlarmManagerHelper.java  AlarmReceiver.java  AlarmService.java  BatteryOptimizationHelper.java  NativeBridge.java  ScheduledWorker.java  WorkManagerHelper.java
core/sources/: androidsystem.cpp  androidsystem.h  barcodeengine.cpp  barcodeengine.h  cloudsynchmanager.cpp  cloudsynchmanager.h  databasemanager.cpp  databasemanager.h  expense.cpp  expense.h  expensesmodel.cpp  expensesmodel.h  income.cpp  income.h  incomemodel.cpp  incomemodel.h  notificationmanager.cpp  notificationmanager.h  product.cpp  product.h  productfilterproxymodel.h  reportmanager.cpp  reportmanager.h  servicemodel.h  settingsmanager.cpp  settingsmanager.h
core/zxing-cpp/wrappers/android/: .project
zxing-cpp/: CMakeLists.txt
